# Settings-Customer

./: .gitignore  .gitmodules
src/: CMakeLists.txt  CMakeUserPresets.json  Settings-Customer_global.h  settingscustomer.cpp  settingscustomer.h
